# kahoot-case

./: README.md  pyproject.toml
kahoot_case/: correlation_regression_analysis.py  data_preprocessing.py  exploratory_analysis.py  main.py  regression_analysis.py
